--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,20 @@
 
     <dependencies>
 
+        <!--        added-->
+        <dependency>
+            <groupId>io.projectreactor.netty</groupId>
+            <artifactId>reactor-netty-http</artifactId>
+            <version>${reactor-netty-version}</version>
+        </dependency>
+        <!--        added-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>RELEASE</version>
+            <scope>provided</scope>
+        </dependency>
+
         <!-- @Nullable annotation -->
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
@@ -80,11 +94,14 @@
             <version>${spring-boot-version}</version>
         </dependency>
 
+
         <dependency>
-            <groupId>io.projectreactor.netty</groupId>
-            <artifactId>reactor-netty-http</artifactId>
-            <version>${reactor-netty-version}</version>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.8</version> <!-- Use the latest version available -->
         </dependency>
+
+
 
         <!-- JSON processing: jackson -->
         <dependency>
