Refactor: Adopt Generated Classes and Optimize Serialization Process
The idea of these tests, is to test how far we can depend on the generated code, how we can add things to make them easier to use, and at the end lead make decision for creating the Exoscale java SDK.

Key changes include:

- Discarding the custom 'Instance' class in preference for the OpenAPI-generated equivalent.
- Implementing Jackson's ObjectMapper for efficient serialization of objects to JSON format within ExoscaleService. New methods, `createInstanceRequestBodyWithJackson` and `createAntiAffinityGroupRequestBodyWithJackson`, serialize 'Instance' and 'AntiAffinityGroup' objects correspondingly.
- Removal of the GSON dependency, after the usage of the Jackson's ObjectMapper
- Adding Lombok's `@Getter` and `@Setter` annotations to the 'SecurityGroup', 'InstanceType', and 'Template' classes to provide required fields for instance creation directly, thus facilitating easier use and clearer code.

This initiative is part of the test, with objective to see how far generated classes can be relied on. The aim is to simplify usage and establish a foundation for the final Exoscale Java SDK using openAPI generator.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #exoscale.api.baseUrl=https://api-at-vie-1.exoscale.com
 exoscale.api.baseUrl=https://api-ch-gva-2.exoscale.com
-exoscale.api.key=${EXO2cd4599fdfdb56446d40445b}
-exoscale.api.ApiKey=EXO2cd4599fdfdb56446d40445b
-exoscale.api.secretKey=HCIGRHhqxDy0gWYix9Ouse3GEWyyNRzQE0KcszJCIgY
-exoscale.api.secret=${HCIGRHhqxDy0gWYix9Ouse3GEWyyNRzQE0KcszJCIgY}
+exoscale.api.key=${PUT YOURS}
+exoscale.api.ApiKey=PUT YOURS
+exoscale.api.secretKey=PUT YOURS
+exoscale.api.secret=${PUT YOURS}
 #exoscale.api.url=https://api-at-vie-1.exoscale.com
 exoscale.api.url=https://api-ch-gva-2.exoscale.com
 debug=true
