--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.openapitools</groupId>
-    <artifactId>openapi-java-client</artifactId>
+    <groupId>com.exoscal</groupId>
+    <artifactId>exoscale4j</artifactId>
     <packaging>jar</packaging>
-    <name>openapi-java-client</name>
-    <version>2.0.0</version>
-    <url>https://github.com/openapitools/openapi-generator</url>
-    <description>OpenAPI Java</description>
+    <name>Exoscale Java SDK</name>
+    <version>1.0.0</version>
+    <url>https://github.com/exoscale/exoscale4j</url>
+    <description>Java SDK for interacting with Exoscale cloud services.</description>
     <scm>
-        <connection>scm:git:git@github.com:openapitools/openapi-generator.git</connection>
-        <developerConnection>scm:git:git@github.com:openapitools/openapi-generator.git</developerConnection>
-        <url>https://github.com/openapitools/openapi-generator</url>
+        <connection>scm:git:git://github.com/exoscale/exoscale4j.git</connection>
+        <developerConnection>scm:git:ssh://github.com/exoscale/exoscale4j.git</developerConnection>
+        <url>https://github.com/exoscale/exoscale4j</url>
     </scm>
 
     <licenses>
@@ -24,10 +24,10 @@
 
     <developers>
         <developer>
-            <name>OpenAPI-Generator Contributors</name>
-            <email>team@openapitools.org</email>
-            <organization>OpenAPITools.org</organization>
-            <organizationUrl>http://openapitools.org</organizationUrl>
+            <name>Giza</name>
+            <email>giza@exoscale.ch</email>
+            <organization>Exoscale</organization>
+            <organizationUrl>https://www.exoscale.com</organizationUrl>
         </developer>
     </developers>
 
