--- a/.openapi-generator-ignore
+++ b/.openapi-generator-ignore
@@ -21,3 +21,19 @@
 #docs/*.md
 # Then explicitly reverse the ignore rule for a single file:
 #!docs/README.md
+
+# Ignore Gradle wrapper files
+gradlew
+gradlew.bat
+gradle/wrapper/gradle-wrapper.jar
+gradle/wrapper/gradle-wrapper.properties
+
+# Ignore build files
+build.gradle
+settings.gradle
+*.gradle.kts
+
+# Ignore SBT build files
+build.sbt
+project/build.properties
+project/plugins.sbt
