--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,11 @@ jdk:
   - openjdk8
 before_install:
   # ensure gradlew has proper permission
-  - chmod a+x ./gradlew
+  #- chmod a+x ./gradlew
 script:
   # test using maven
-  #- mvn test
+  - mvn test
   # test using gradle
-  - gradle test
+  #- gradle test
   # test using sbt
   # - sbt test
