Point the openapi-generator plugin in to the tepmplate directory.

--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
                                 <buildTool>maven</buildTool>
                             </additionalProperties>
                             <output>${project.basedir}/sdk</output>
-                            <templateDirectory>${project.basedir}</templateDirectory>
+                            <templateDirectory>${project.basedir}/generator</templateDirectory>
                         </configuration>
                     </execution>
                 </executions>
