--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,9 +7,11 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ main, master ]
+    branches: 
+      - '**'
   pull_request:
-    branches: [ main, master ]
+    branches:
+      - '**'
 
 jobs:
   build:
@@ -17,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ '8' ]
+        java: [ '11' ]
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK
