--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,4 +29,4 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package --no-transfer-progress --file pom.xml
+      run: cd sdk && mvn -B package --no-transfer-progress --file pom.xml
