--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,5 +28,7 @@ jobs:
         java-version: ${{ matrix.java }}
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: cd sdk && mvn -B package --no-transfer-progress --file pom.xml
+    - name: Generate sources in root
+      run: mvn -B generate-sources --no-transfer-progress --file pom.xml
+    - name: Build SDK with Maven
+      run: cd sdk && mvn -B install --no-transfer-progress --file pom.xml
