--- a/.github/workflows/maven_publish.yml
+++ b/.github/workflows/maven_publish.yml
@@ -50,7 +50,7 @@ jobs:
 
     # Build with Maven
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -B package --file /sdk/pom.xml
 
     # Publish to Maven Central
     - name: Publish to Maven Central
