--- a/.github/workflows/maven_publish.yml
+++ b/.github/workflows/maven_publish.yml
@@ -54,7 +54,7 @@ jobs:
 
     # Publish to Maven Central
     - name: Publish to Maven Central
-      run: mvn deploy -P sign-artifacts --settings ${{ github.workspace }}/settings.xml
+      run: mvn deploy -P sign-artifacts --file sdk/pom.xml --settings ${{ github.workspace }}/settings.xml
       env:
         MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
         MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
