--- a/.github/workflows/maven_publish.yml
+++ b/.github/workflows/maven_publish.yml
@@ -20,33 +20,6 @@ jobs:
         server-id: 'central' 
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
-    # Create a settings.xml file
-    - name: Create settings.xml
-      run: |
-        echo "<settings xmlns=\"http://maven.apache.org/SETTINGS/1.0.0\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:schemaLocation=\"http://maven.apache.org/xsd/settings-1.0.0.xsd\">
-          <servers>
-            <server>
-              <id>central</id>
-              <username>${{ secrets.MAVEN_USERNAME }}</username>
-              <password>${{ secrets.MAVEN_PASSWORD }}</password>
-            </server>
-          </servers>
-          <profiles>
-            <profile>
-              <id>gpg</id>
-              <properties>
-                <gpg.executable>gpg</gpg.executable>
-                <gpg.keyname>${{ secrets.MAVEN_GPG_KEYNAME }}</gpg.keyname>
-                <gpg.passphrase>${{ secrets.MAVEN_GPG_PASSPHRASE }}</gpg.passphrase>
-                <gpg.secretKeyring>{{ secrets.MAVEN_GPG_KEYNAME }}</gpg.secretKeyring>
-              </properties>
-            </profile>
-          </profiles>
-          <activeProfiles>
-            <activeProfile>gpg</activeProfile>
-          </activeProfiles>
-        </settings>" > ${{ github.workspace }}/settings.xml
-
 
     # Build with Maven
     - name: Build with Maven
@@ -54,8 +27,10 @@ jobs:
 
     # Publish to Maven Central
     - name: Publish to Maven Central
-      run: mvn deploy -P sign-artifacts --file sdk/pom.xml --settings ${{ github.workspace }}/settings.xml
+      run: mvn deploy -P sign-artifacts --file sdk/pom.xml 
       env:
         MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
         MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
         GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
+
+
