--- a/.github/workflows/maven_publish.yml
+++ b/.github/workflows/maven_publish.yml
@@ -19,15 +19,29 @@ jobs:
         distribution: 'temurin'
         server-id: 'central' 
         settings-path: ${{ github.workspace }} # location for the settings.xml file
+        
+    - name: Generate settings.xml
+      run: |
+        cat << EOF > ${{ github.workspace }}/settings.xml
+        <settings>
+          <servers>
+            <server>
+              <id>central</id>
+              <username>${{ secrets.MAVEN_USERNAME }}</username>
+              <password>${{ secrets.MAVEN_PASSWORD }}</password>
+            </server>
+          </servers>
+        </settings>
+        EOF
 
 
     # Build with Maven
     - name: Build with Maven
-      run: mvn -B package --file sdk/pom.xml
+      run: mvn -B package --file sdk/pom.xml -s ${{ github.workspace }}/settings.xml
 
     # Publish to Maven Central
     - name: Publish to Maven Central
-      run: mvn deploy --file sdk/pom.xml 
+      run: mvn deploy --file sdk/pom.xml -s ${{ github.workspace }}/settings.xml
       env:
         MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
         MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
