--- a/.github/workflows/maven_publish.yml
+++ b/.github/workflows/maven_publish.yml
@@ -37,11 +37,11 @@ jobs:
 
     # Build with Maven
     - name: Build with Maven
-      run: mvn -B package --file sdk/pom.xml -s ${{ github.workspace }}/settings.xml
+      run: mvn -B package --file sdk/pom.xml -s ${{ github.workspace }}/settings.xml -Dgpg.passphrase=${{ secrets.MAVEN_GPG_PASSPHRASE }}
 
     # Publish to Maven Central
     - name: Publish to Maven Central
-      run: mvn deploy --file sdk/pom.xml -s ${{ github.workspace }}/settings.xml
+      run: mvn deploy --file sdk/pom.xml -s ${{ github.workspace }}/settings.xml -Dgpg.passphrase=${{ secrets.MAVEN_GPG_PASSPHRASE }}
       env:
         MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
         MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
