--- a/.github/workflows/publish-to-maven-central.yml
+++ b/.github/workflows/publish-to-maven-central.yml
@@ -21,6 +21,12 @@ jobs:
         with:
           distribution: 'adopt'
           java-version: '11'
+          
+      - name: Import GPG key
+        run: |
+          echo "$MAVEN_GPG_KEYRING" | gpg --import --batch --yes
+        env:
+          MAVEN_GPG_KEYRING: ${{ secrets.MAVEN_GPG_KEYRING }}
 
       - name: Publish to Maven Central
         run: mvn clean deploy -P sign-artifacts --settings ../.github/maven-settings.xml
