--- a/.github/workflows/mvn-publish.yml
+++ b/.github/workflows/mvn-publish.yml
@@ -16,36 +16,8 @@ jobs:
         distribution: 'temurin'
         server-id: 'central' 
         settings-path: ${{ github.workspace }} # location for the settings.xml file
-        
-    - name: Generate settings.xml
-      run: |
-        cat << EOF > ${{ github.workspace }}/settings.xml
-        <settings>
-          <servers>
-            <server>
-              <id>central</id>
-              <username>${{ secrets.MAVEN_USERNAME }}</username>
-              <password>${{ secrets.MAVEN_PASSWORD }}</password>
-            </server>
-          </servers>
-        </settings>
-        EOF
-    
-    # Import GPG key
-    - name: Import GPG key
-      run: |
-        echo "$GPG_PRIVATE_KEY" | gpg --batch --import
-      env:
-        GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
-
-    # Build and sign artifacts with Maven
-    - name: Build with Maven
-      run: mvn -B package --file sdk/pom.xml verify -P sign-artifacts -s ${{ github.workspace }}/settings.xml -Dgpg.passphrase=${{ secrets.MAVEN_GPG_PASSPHRASE }}
-
-    # Publish to Maven Central
-    - name: Publish to Maven Central
-      run: mvn deploy --file sdk/pom.xml -P sign-artifacts -s ${{ github.workspace }}/settings.xml -Dgpg.passphrase=${{ secrets.MAVEN_GPG_PASSPHRASE }}
+    - name: Publish package
+      run: mvn --batch-mode deploy --file sdk/pom.xml
       env:
         MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
-        MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
-        MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
+        MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD}}
