--- a/.github/workflows/mvn-publish.yml
+++ b/.github/workflows/mvn-publish.yml
@@ -14,8 +14,9 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
-        server-id: 'central' 
-        settings-path: ${{ github.workspace }} # location for the settings.xml file
+        server-id: 'central'
+        server-username: MAVEN_USERNAME
+        server-password: MAVEN_PASSWORD
     - name: Publish package
       run: mvn --batch-mode deploy --file sdk/pom.xml
       env:
