--- a/.github/workflows/mvn-publish.yml
+++ b/.github/workflows/mvn-publish.yml
@@ -17,8 +17,11 @@ jobs:
         server-id: 'central'
         server-username: MAVEN_USERNAME
         server-password: MAVEN_PASSWORD
+        gpg-private-key: ${{ secrets.MAVEN_GPG_KEYRING }}
+        gpg-passphrase: MAVEN_GPG_PASSPHRASE
     - name: Publish package
       run: mvn --batch-mode deploy --file sdk/pom.xml
       env:
         MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
         MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD}}
+        MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
