--- a/.github/workflows/mvn-publish.yml
+++ b/.github/workflows/mvn-publish.yml
@@ -6,11 +6,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     
     # Set up JDK 11
     - name: Set up JDK 11
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         java-version: '11'
         distribution: 'temurin'
@@ -20,7 +20,7 @@ jobs:
         gpg-private-key: ${{ secrets.MAVEN_GPG_KEYRING }}
         gpg-passphrase: MAVEN_GPG_PASSPHRASE
     - name: Publish package
-      run: mvn --batch-mode deploy --file sdk/pom.xml -Psign-artifacts
+      run: mvn -X --batch-mode deploy --file sdk/pom.xml -Psign-artifacts
       env:
         MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
         MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD}}
