--- a/sdk/.github/workflows/maven.yml
+++ b/sdk/.github/workflows/maven.yml
@@ -17,13 +17,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ '8' ]
+        java: [ '11' ]
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up JDK
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v4
       with:
-        java-version: ${{ matrix.java }}
+        java-version: '11'
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
