--- a/.github/workflows/update-sdk.yaml
+++ b/.github/workflows/update-sdk.yaml
@@ -22,19 +22,13 @@ jobs:
           curl https://openapi-v2.exoscale.com/source.yaml > sdk/api/openapi.yaml
 
       - name: Check for changes in OpenAPI definition
-        id: changes
+        id: check_changes
         run: |
           if ! git diff --exit-code sdk/api/openapi.yaml; then
-            echo "true" > changes_detected
+            echo "changes=true" >> $GITHUB_ENV
           else
-            echo "false" > changes_detected
+            echo "changes=false" >> $GITHUB_ENV
           fi
-        continue-on-error: true
-
-      - name: Set output
-        id: set-output
-        run: |
-          echo "::set-output name=changes::$(cat changes_detected)"
 
   update-version:
     runs-on: ubuntu-latest
@@ -75,3 +69,4 @@ jobs:
         run: |
           git tag -a v${new_version} -m "Release ${new_version}"
           git push origin v${new_version}
+
