--- a/.github/workflows/increment-version.yaml
+++ b/.github/workflows/increment-version.yaml
@@ -16,6 +16,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Install xmlstarlet
+        run: sudo apt-get install -y xmlstarlet
+
       - name: Increment artifactVersion
         run: |
           current_version=$(xmlstarlet sel -t -v "//artifactVersion" pom.xml)
