--- a/.github/workflows/generate-and-release.yaml
+++ b/.github/workflows/generate-and-release.yaml
@@ -38,7 +38,7 @@ jobs:
       - name: Compile and install SDK
         run: |
           cd sdk
-          mvn install
+          mvn clean install -Dmaven.test.skip=true -X
 
       - name: Commit changes
         run: |
