--- a/.github/workflows/generate-and-release.yaml
+++ b/.github/workflows/generate-and-release.yaml
@@ -3,7 +3,7 @@ name: Generate SDK and Release
 on:
   push:
     branches:
-      - test-workflow
+      - test
   workflow_dispatch:
   schedule:
     - cron: '0 * * * *'  # At :00 every hour
