--- a/.github/workflows/generate-and-release.yaml
+++ b/.github/workflows/generate-and-release.yaml
@@ -46,7 +46,7 @@ jobs:
           git config user.email "actions@users.noreply.github.com"
           git add pom.xml
           git commit -m "Release ${new_version}"
-          git push origin main
+          git push origin test-workflow
 
       - name: Create release tag
         run: |
