--- a/.github/workflows/generate-and-release.yaml
+++ b/.github/workflows/generate-and-release.yaml
@@ -32,20 +32,23 @@ jobs:
           echo "new_version=$new_version" >> $GITHUB_ENV
           echo "Updated version to $new_version"
 
+      - name: Delete old SDK folder
+        run: rm -rf sdk
+
       - name: Generate SDK sources
-        run: mvn generate-sources
+        run: mvn -B generate-sources --no-transfer-progress --file pom.xml
 
       - name: Compile and install SDK
-        run: |
-          cd sdk
-          mvn clean install -Dmaven.test.skip=true -X
+        run: cd sdk && mvn -B install --no-transfer-progress --file pom.xml
 
       - name: Commit changes
         run: |
           git config user.name "Automated"
           git config user.email "actions@users.noreply.github.com"
           git add pom.xml
+          git add sdk/  # Add the generated SDK
           git commit -m "Release ${new_version}"
+          git pull --rebase origin test-workflow
           git push origin test-workflow
 
       - name: Create release tag
