--- a/.github/workflows/generate-and-release.yaml
+++ b/.github/workflows/generate-and-release.yaml
@@ -4,9 +4,10 @@ on:
   push:
     branches:
       - Automise-release-process  # to be changed into main after merge
+    paths:
+      - 'sdk/api/openapi.yaml'
   workflow_dispatch:
-  schedule:
-    - cron: '0 * * * *'  # At :00 every hour
+
 
 jobs:
   generate-and-release-sdk:
@@ -48,11 +49,11 @@ jobs:
           git add pom.xml
           git add sdk/  # Add the generated SDK
           git commit -m "Release ${new_version}"
-          git pull --rebase origin Automise-release-process
-          git push origin Automise-release-process
+          git pull --rebase origin Automise-release-process  # to be changed into main after merge
+          git push origin Automise-release-process  # to be changed into main after merge
 
       - name: Create release tag
         run: |
           new_version=${{ env.new_version }}
           git tag -a v${new_version} -m "Release ${new_version}"
-          git push origin v${new_version}
+          git push origin Automise-release-process v${new_version}  # to be changed into main after merge
