Update and rename generate-new-sdk to generate-new-sdk.yaml

--- a/.github/workflows/generate-new-sdk.yaml
+++ b/.github/workflows/generate-new-sdk.yaml
@@ -1,6 +1,8 @@
-name: Update OpenAPI and generate SDK
+name: Update bundled OpenAPI definition and generate SDK
 
 on:
+  schedule:
+    - cron: '10 12 * * *'  # UTC
   workflow_dispatch:
 
 jobs:
@@ -41,4 +43,4 @@ jobs:
           git add sdk/  # Add the generated SDK
           timestamp=$(date -u)
           git commit -m "OpenAPI spec update and SDK generation: ${timestamp}" || exit 0
-          git push origin actions-test  # Change from actions-test to main branch after commit
+          git push origin actions-test  # Change to main branch after testing
