--- a/.github/workflows/generate-new-sdk.yml
+++ b/.github/workflows/generate-new-sdk.yml
@@ -1,8 +1,6 @@
-name: Update bundled OpenAPI definition and generate SDK
+name: Update OpenAPI and generate SDK
 
 on:
-  schedule:
-    - cron: '10 12 * * *'  # UTC
   workflow_dispatch:
 
 jobs:
