--- a/.github/workflows/generate-new-sdk.yml
+++ b/.github/workflows/generate-new-sdk.yml
@@ -2,6 +2,8 @@ name: Update OpenAPI and generate SDK
 
 on:
   workflow_dispatch:
+    branches:
+      - actions-test
 
 jobs:
   update-openapi-generate-sdk:
