--- a/.github/workflows/generate-new-sdk.yml
+++ b/.github/workflows/generate-new-sdk.yml
@@ -13,6 +13,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Cache previous OpenAPI file
+        id: cache-openapi
+        uses: actions/cache@v3
+        with:
+          path: sdk/api/openapi_old.yaml
+          key: openapi-old
+
       - name: Fetch the current OpenAPI definition
         run: |
           cp sdk/api/openapi.yaml sdk/api/openapi_old.yaml || echo "No previous OpenAPI file."
@@ -26,26 +33,26 @@ jobs:
         run: |
           if diff sdk/api/openapi.yaml sdk/api/openapi_old.yaml; then
             echo "No changes in OpenAPI definition."
-            echo "::set-output name=changed::false"
+            echo "changed=false" >> $GITHUB_ENV
           else
             echo "OpenAPI definition has changed."
-            echo "::set-output name=changed::true"
+            echo "changed=true" >> $GITHUB_ENV
           fi
 
       - name: Delete old SDK folder
-        if: steps.check_changes.outputs.changed == 'true'
+        if: env.changed == 'true'
         run: rm -rf sdk
 
       - name: Generate SDK sources
-        if: steps.check_changes.outputs.changed == 'true'
+        if: env.changed == 'true'
         run: mvn -B generate-sources --no-transfer-progress --file pom.xml
 
       - name: Compile and install SDK
-        if: steps.check_changes.outputs.changed == 'true'
+        if: env.changed == 'true'
         run: cd sdk && mvn -B install --no-transfer-progress --file pom.xml -Dmaven.test.skip=true -X
 
       - name: Commit changes
-        if: steps.check_changes.outputs.changed == 'true'
+        if: env.changed == 'true'
         run: |
           git config user.name "Automated"
           git config user.email "actions@users.noreply.github.com"
@@ -55,9 +62,9 @@ jobs:
           git commit -m "OpenAPI spec update and SDK generation: ${timestamp}" || exit 0
 
       - name: Pull latest changes from remote
-        if: steps.check_changes.outputs.changed == 'true'
+        if: env.changed == 'true'
         run: git pull --rebase origin actions-test
 
       - name: Push changes
-        if: steps.check_changes.outputs.changed == 'true'
+        if: env.changed == 'true'
         run: git push origin actions-test  # Change to main branch after testing
